Added an other section + CTA button short

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ section: home
                     <p class="u-mb-delta">Op 18 februari kan je al je vragen stellen op de opendeurdag. </p>
                     <p>
                         <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                            Schrijf je in voor de opendeurdag via Facebook
+                            Schrijf je in voor de opendeurdag
                         </a>
                     </p>
                 </div>
@@ -315,6 +315,50 @@ section: home
         </div>
     </div>
 </section>
+<section class="c-section c-section--vision">
+    <div class="c-row c-row--xxl">
+        <div class="o-container">
+            <div class="c-row__section c-row__section--xxl">
+                <div class="u-max-width-md u-text-center u-align-horizontal">
+                    <h1 class="u-color-gamma-dark u-ms7-bp3">
+                        Klaar voor het middelbaar?
+                    </h1>
+                </div>
+            </div>
+            <div class="c-row__section c-row__section--xxl">
+                <div class="o-grid o-grid--gutter">
+                    <div class="o-grid__item u-1-of-2-bp4">
+                        <div class="u-max-width-sm s-content">
+                            <p>
+Is er wel genoeg structuur? Krijgen ze wel de juiste vakken? Kunnen ze terecht in het secundair onderwijs?
+   </p>
+                            <p>
+Freinetonderwijs heeft weldegelijk structuur. Er is een dagindeling, afspraken en regels. Deze worden soms geïnstalleerd door de school of leerkracht, maar liefst in samenspraak met ouders en kinderen. Zo worden deze structuren gedragen en dus beter nageleefd.
+   </p>
+                            <p>
+De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod vanuit projecten als huisdieren, kriebelbeestjes of ridders. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
+   </p>
+                            <p>
+Klimop heeft gelijkaardige eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties klimop alumni zijn daar het bewijs van.
+                            </p>
+
+                        </div>
+                    </div>
+                    <div class="o-grid__item u-1-of-2-bp4">
+                        <div class="u-max-width-sm s-content">
+                               <p>
+De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod vanuit projecten als huisdieren, kriebelbeestjes of ridders. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
+   </p>
+                            <p>
+Klimop heeft gelijkaardige eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties klimop alumni zijn daar het bewijs van.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="c-section c-section--cta">
     <div class="c-row c-row--xxl c-row--clear-top">
         <figure class="c-pictures c-pictures--last u-mb-epsilon">
@@ -331,7 +375,7 @@ section: home
                     <p class="u-mb-delta">Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
                     <p>
                         <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                             Schrijf je in voor de opendeurdag via Facebook
+                             Schrijf je in voor de opendeurdag
                         </a>
                     </p>
                 </div>
