--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ section: home
                     <p class="u-mb-delta">Op 18 februari kan je al je vragen stellen op de opendeurdag. </p>
                     <p>
                         <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                            Schrijf je in voor de opendeurdag
+                            Kom naar de opendeurdag
                         </a>
                     </p>
                 </div>
@@ -336,7 +336,7 @@ Is er wel genoeg structuur? Krijgen ze wel de juiste vakken? Kunnen ze terecht i
 Freinetonderwijs heeft weldegelijk structuur. Er is een dagindeling, afspraken en regels. Deze worden soms geïnstalleerd door de school of leerkracht, maar liefst in samenspraak met ouders en kinderen. Zo worden deze structuren gedragen en dus beter nageleefd.
    </p>
                             <p>
-De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod vanuit projecten als huisdieren, kriebelbeestjes of ridders. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
+De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod vanuit projecten en werkstukken. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
    </p>
                             <p>
 Klimop heeft gelijkaardige eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties klimop alumni zijn daar het bewijs van.
@@ -375,7 +375,7 @@ Klimop heeft gelijkaardige eindtermen als andere scholen en krijgt zoals iederee
                     <p class="u-mb-delta">Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
                     <p>
                         <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                             Schrijf je in voor de opendeurdag
+                             Kom naar de opendeurdag
                         </a>
                     </p>
                 </div>
