--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@ section: home
             Ontdek hoe een dag van een kind eruit ziet in Klimop
         </p> -->
     </div>
-    <div class="c-row c-row--clear-tb">
+    <div class="c-row c-row--clear-tb js-scene-figures-1">
         <figure class="c-pictures c-pictures--first js-pictures">
-            <div class="c-picture" data-stellar-ratio="2">
+            <div class="c-picture js-scene-figures-1-picture-1" data-stellar-ratio="2">
                 <img class="c-picture__image js-blazy" src="img/photos/small/DSC_1853.jpg" data-src-small="img/photos/small/DSC_1853.jpg" data-src-medium="img/photos/medium/DSC_1853.jpg" data-src="img/photos/large/DSC_1853.jpg" alt="">
             </div>
-            <div class="c-picture" data-stellar-ratio="3">
+            <div class="c-picture js-scene-figures-1-picture-2" data-stellar-ratio="3">
                 <img class="c-picture__image js-blazy" src="img/photos/small/82.jpg" data-src-small="img/photos/small/82.jpg" data-src-medium="img/photos/medium/82.jpg" data-src="img/photos/large/82.jpg" alt="">
             </div>
-            <div class="c-picture" data-stellar-ratio="5">
+            <div class="c-picture js-scene-figures-1-picture-3" data-stellar-ratio="5">
                 <img class="c-picture__image js-blazy" src="img/photos/small/84.jpg" data-src-small="img/photos/small/84.jpg" data-src-medium="img/photos/medium/84.jpg" data-src="img/photos/large/84.jpg" alt="">
             </div>
         </figure>
@@ -246,7 +246,7 @@ section: home
         </div>
     </div>
     <div class="c-row c-row--clear-tb">
-        <figure class="c-pictures c-pictures--second">
+        <figure class="c-pictures c-pictures--second js-scene-figures-2">
             <div class="c-picture">
                 <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0258.jpg" data-src-small="img/photos/small/DSC_0258.jpg" data-src-medium="img/photos/medium/DSC_0258.jpg" data-src="img/photos/large/DSC_0258.jpg" alt="">
             </div>
