--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@ layout: default
 title: Homepage
 section: home
 ---
-<section class="c-section c-section--intro">
-    <div class="c-row c-row--xxl c-row--full c-intro">
-        <!-- <div class="c-background-image c-background-image--opacity-alpha js-blazy" data-src="img/photos/2_17.jpg"></div> -->
+<section class="c-section">
+    <div class="c-row c-row--xxl c-row--full">
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
                 <h1 class="u-ms7-bp3 u-color-alpha-dark">Een gewone school, maar helemaal anders. Met activiteiten en afspraken, vanuit de leefwereld van je kind.</h1>
             </div>
         </div>
-        <!-- <p class="c-intro__more">
-            Ontdek hoe een dag van een kind eruit ziet in Klimop
-        </p> -->
     </div>
     <div class="c-row c-row--clear-tb">
         <figure class="c-pictures c-pictures--first js-pictures">
@@ -29,7 +25,7 @@ section: home
         </figure>
     </div>
 </section>
-<section class="c-section c-section--timeline">
+<section class="c-section">
     <div class="c-row c-row--xxl">
         <div class="o-container">
             <div class="c-row__section c-row__section--xxl">
@@ -259,17 +255,17 @@ section: home
         </figure>
     </div>
 </section>
-<section class="c-section c-section--vision">
+<section class="c-section">
     <div class="c-row c-row--xxl">
         <div class="o-container">
-            <div class="c-row__section c-row__section--xxl">
-                <div class="u-max-width-md u-text-center u-align-horizontal">
+            <div class="c-row__section c-row__section--xl">
+                <div class="u-max-width-md">
                     <h1 class="u-color-gamma-dark u-ms7-bp3">
                        Samen school maken, want toch iedereen wil graag een goede school voor zijn kinderen.
                     </h1>
                 </div>
             </div>
-            <div class="c-row__section c-row__section--xxl">
+            <div class="c-row__section c-row__section--xl">
                 <div class="o-grid o-grid--gutter">
                     <div class="o-grid__item u-1-of-2-bp4">
                         <div class="u-max-width-sm s-content">
@@ -312,20 +308,14 @@ section: home
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-<section class="c-section c-section--vision">
-    <div class="c-row c-row--xxl">
-        <div class="o-container">
-            <div class="c-row__section c-row__section--xxl">
-                <div class="u-max-width-md u-text-center u-align-horizontal">
+            <div class="c-row__section c-row__section--xl">
+                <div class="u-max-width-md">
                     <h1 class="u-color-gamma-dark u-ms7-bp3">
                         Klaar voor het middelbaar?
                     </h1>
                 </div>
             </div>
-            <div class="c-row__section c-row__section--xxl">
+            <div class="c-row__section c-row__section--xl">
                 <div class="o-grid o-grid--gutter">
                     <div class="o-grid__item u-1-of-2-bp4">
                         <div class="u-max-width-sm s-content">
@@ -354,7 +344,7 @@ Klimop heeft gelijkaardige eindtermen als andere scholen en krijgt zoals iederee
         </div>
     </div>
 </section>
-<section class="c-section c-section--cta">
+<section class="c-section">
     <div class="c-row c-row--xxl c-row--clear-top">
         <figure class="c-pictures c-pictures--last u-mb-epsilon">
             <div class="c-picture">
