k in werk en eindtermen

--- a/index.html
+++ b/index.html
@@ -342,10 +342,10 @@ Freinetonderwijs heeft weldegelijk structuur. Er is een dagindeling, afspraken e
                     <div class="o-grid__item u-1-of-2-bp4">
                         <div class="u-max-width-sm s-content">
                                <p>
-De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod in projecten en werstukken. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
+De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod in projecten en werkstukken. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
    </p>
                             <p>
-Klimop heeft gelijkaardige eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties klimop alumni zijn daar het bewijs van.
+Klimop heeft dezelfde eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties klimop alumni zijn daar het bewijs van.
                             </p>
                         </div>
                     </div>
