pulled out pictures to includes

--- a/index.html
+++ b/index.html
@@ -12,17 +12,7 @@ section: home
         </div>
     </div>
     <div class="c-row c-row--clear-tb">
-        <figure class="c-pictures c-pictures--first js-pictures">
-            <div class="c-picture" data-stellar-ratio="2">
-                <img class="c-picture__image js-blazy" src="img/photos/small/DSC_1853.jpg" data-src-small="img/photos/small/DSC_1853.jpg" data-src-medium="img/photos/medium/DSC_1853.jpg" data-src="img/photos/large/DSC_1853.jpg" alt="">
-            </div>
-            <div class="c-picture" data-stellar-ratio="3">
-                <img class="c-picture__image js-blazy" src="img/photos/small/82.jpg" data-src-small="img/photos/small/82.jpg" data-src-medium="img/photos/medium/82.jpg" data-src="img/photos/large/82.jpg" alt="">
-            </div>
-            <div class="c-picture" data-stellar-ratio="5">
-                <img class="c-picture__image js-blazy" src="img/photos/small/84.jpg" data-src-small="img/photos/small/84.jpg" data-src-medium="img/photos/medium/84.jpg" data-src="img/photos/large/84.jpg" alt="">
-            </div>
-        </figure>
+        {% include components.pictures-1.html %}
     </div>
 </section>
 <section class="c-section">
@@ -242,17 +232,7 @@ section: home
         </div>
     </div>
     <div class="c-row c-row--clear-tb">
-        <figure class="c-pictures c-pictures--second">
-            <div class="c-picture">
-                <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0258.jpg" data-src-small="img/photos/small/DSC_0258.jpg" data-src-medium="img/photos/medium/DSC_0258.jpg" data-src="img/photos/large/DSC_0258.jpg" alt="">
-            </div>
-            <div class="c-picture">
-                <img class="c-picture__image js-blazy" src="img/photos/small/15.jpg" data-src-small="img/photos/small/15.jpg" data-src-medium="img/photos/medium/15.jpg" data-src="img/photos/large/15.jpg" alt="">
-            </div>
-            <div class="c-picture">
-                <img class="c-picture__image js-blazy" src="img/photos/small/DSC_0622.jpg" data-src-small="img/photos/small/DSC_0622.jpg" data-src-medium="img/photos/medium/DSC_0622.jpg" data-src="img/photos/large/DSC_0622.jpg" alt="">
-            </div>
-        </figure>
+        {% include components.pictures-2.html %}
     </div>
 </section>
 <section class="c-section">
@@ -346,11 +326,7 @@ Klimop heeft dezelfde eindtermen als andere scholen en krijgt zoals iedereen de 
 </section>
 <section class="c-section">
     <div class="c-row c-row--xxl c-row--clear-top">
-        <figure class="c-pictures c-pictures--last u-mb-epsilon">
-            <div class="c-picture">
-                <img class="c-picture__image js-blazy" src="img/photos/small/kasteel.jpg" data-src-small="img/photos/small/kasteel.jpg" data-src-medium="img/photos/medium/kasteel.jpg" data-src="img/photos/large/kasteel.jpg" alt="">
-            </div>
-        </figure>
+        {% include components.pictures-3.html %}
     </div>
     <div class="c-row c-row--xxl c-row--clear-top">
         <div class="o-container">
