--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ section: home
     <div class="c-row c-row--xxl c-row--full">
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
-                <h1 class="u-ms7-bp3 u-color-alpha-dark">Een gewone school, maar helemaal anders. Met activiteiten en afspraken, vanuit de leefwereld van je kind.</h1>
+                <h1 class="u-ms7-bp3 u-color-alpha-dark">Een gewone school, maar toch helemaal anders. Ontdekkend leren vanuit de leefwereld van je kind.</h1>
             </div>
         </div>
     </div>
