Update content for launch

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ section: home
                                         Het onthaal op Klimop
                                     </h2>
                                     <p>
-                                       We vinden het belangrijk dat niet alleen het kind naar school komt maar ook zijn verhalen. Daarmee willen we graag aan de slag. Ouders zijn dan ook meer dan welkom om dat te verhelderen. Vooral net voor of na schooltijd worden er veel nieuwtjes uitgewisseld. Een plezante ontmoeting in de klas of in de schapenstal of op de speelplaats…
+                                       We vinden het belangrijk dat niet alleen het kind naar school komt maar ook zijn verhalen. Daarmee willen we graag aan de slag. Ouders zijn dan ook meer dan welkom om dat te verhelderen. Vooral net voor of na schooltijd worden er veel nieuwtjes uitgewisseld. Een plezante ontmoeting in de klas, in de schapenstal of op de speelplaats…
                                     </p>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@ section: home
                                         (Individuele) Begeleiding bij specifieke problemen
                                     </h2>
                                     <p>
-                                        De opvolging van de kinderen, zowel op cognitief als sociaal-emotioneel vlak, vindt bijna dagelijks plaats. Een toets of examen geeft onvoldoende weer wat iemand geleerd heeft en hoeveel iemand ondertussen gegroeid is. Elk kind heeft zijn eigen traject waarbij de evolutie van welbevinden en betrokkenheid even belangrijk is als kennis. Een goede klasorganisatie en het toepassen van daaraan aangepaste opvolgingsmethoden maken het mogelijk de kinderen heel nauw te observeren en dit op een vlotte manier te registeren.
+                                        De opvolging van de kinderen, zowel op cognitief als sociaal-emotioneel vlak, vindt bijna dagelijks plaats. Een toets of examen geeft onvoldoende weer wat iemand geleerd heeft en hoeveel iemand ondertussen gegroeid is. Elk kind heeft zijn eigen traject waarbij het totale kind (het de evolutie van welbevinden en betrokkenheid even belangrijk is als kennis. Een goede klasorganisatie en het toepassen van daaraan aangepaste opvolgingsmethoden maken het mogelijk de kinderen heel nauw te observeren en dit op een vlotte manier te registeren.
                                     </p>
                                 </div>
                             </div>
@@ -133,7 +133,7 @@ section: home
                                         Pauze
                                     </h2>
                                      <p>
-                                        Samen pauzeren is meestal fijner dan alleen. Bovendien maken pauzes deel uit van een werkdag. Daarom wordt er op Klimop ruim aandacht besteed aan deze klasmomenten. Tijdens de buitentijd respecteert iedereen de vooraf afgebakende speelzones, er is geen hekken maar een duidelijke afspraak die bekrachtigd werd door de schoolraad. Afspraken die we als groep nemen of bekrachtigen zijn veel effectiever dan diegene die worden opgelegd.
+                                        Samen pauzeren is meestal fijner dan alleen. Bovendien maken pauzes deel uit van een werkdag. Daarom wordt er op Klimop ruim aandacht besteed aan deze klasmomenten. Tijdens de buitentijd respecteert iedereen de vooraf afgebakende speelzones. Afspraken die we als groep nemen zijn veel effectiever dan diegene die opgelegd zijn.
                                     </p>
                                 </div>
                             </div>
@@ -153,7 +153,7 @@ section: home
                                         Projecten en werkstukken
                                     </h2>
                                     <p>
-                                        Kinderen hoeven geen wandelende encyclopedieën te worden, maar moeten vooral leren hoe ze de wereld op hun manier het beste kunnen onderzoeken. Ze ervaren die wereld ook niet als opgesplitste in vakken (aardrijkskunde, geschiedenis, verkeer,...) en dat willen we zo houden. Bij de kleuters en de eerste graad worden de projecten eerder klassikaal aangepakt . Naarmate de kinderen ouder worden, regelen ze meer dingen zelf. De freinetmethodiek vertrekt ook vanuit verschillende soorten intelligentie: sociale intelligentie, ruimtelijk inzicht, esthetisch aanvoelen, mentale kracht en motorisch vermogen. Iedereen heeft zijn eigen talenten, die hij of zij op een andere manier kan ontwikkelen.
+                                        Kinderen hoeven geen wandelende encyclopedieën te worden, maar moeten vooral leren hoe ze de wereld op hun manier het beste kunnen onderzoeken. Ze ervaren die wereld ook niet als opgesplitst in vakken (aardrijkskunde, geschiedenis, verkeer,...) en dat willen we zo houden. Bij de kleuters en de eerste graad worden de projecten eerder klassikaal aangepakt . Naarmate de kinderen ouder worden, regelen ze meer dingen zelf. De freinetmethodiek vertrekt ook vanuit verschillende soorten intelligentie: sociale intelligentie, ruimtelijk inzicht, esthetisch aanvoelen, mentale kracht en motorisch vermogen. Iedereen heeft zijn eigen talenten, die hij of zij op een andere manier kan ontwikkelen.
                                     </p>
                                 </div>
                             </div>
@@ -188,7 +188,7 @@ section: home
                                         Er is gedurende een hele dag samen gewerkt en geleefd. Er zijn prettige en misschien minder prettige dingen gebeurd. Het is dan ook goed om de dag samen op een goede manier af te sluiten. Teksten die gemaakt zijn worden voorgelezen, onderzoekjes worden voorgesteld, toneeltjes gespeeld, tekeningen geëxposeerd, afspraken die belangrijk zijn voor de volgende dag worden gemaakt,... Je leert het meest door betrokken te zijn bij het project, door zelf iets in handen te nemen.
                                     </p>
                                     <p>
-                                        Succes stimuleert. Appreciatie voor het proces dat jij hebt doorgemaakt, zorgt ervoor dat je zin hebt om nog eens die leerervaring aan te gaan. Daarom zetten we om de 14 dagen de hele school samen: een forum vindt dan plaats in de arena of op een verdiep of ergens anders op het domein.
+                                        Succes stimuleert. Appreciatie voor het proces dat jij hebt doorgemaakt, zorgt ervoor dat je zin hebt om nog eens die leerervaring aan te gaan. Daarom zetten we om de 14 dagen de hele school samen: een forum vindt dan plaats in de arena, op een verdiep of ergens anders op het domein.
                                     </p>
                                 </div>
                             </div>
@@ -241,7 +241,7 @@ section: home
             <div class="c-row__section c-row__section--xl">
                 <div class="u-max-width-md">
                     <h1 class="u-color-gamma-dark u-ms7-bp3">
-                       Samen school maken, want toch iedereen wil graag een goede school voor zijn kinderen.
+                       Samen school maken, want iedereen wil toch graag een goede school voor zijn kinderen.
                     </h1>
                 </div>
             </div>
@@ -256,7 +256,7 @@ section: home
                                 Vanuit de visie van freinetonderwijs nemen ouders een belangrijke plaats in. De school betrekt daarom de ouders zeer nauw bij het schoolleven, verder dan alleen de zorg voor het eigen kind. Er zijn veel mogelijkheden om als ouder actief deel te nemen aan het schoolleven, en dit op verschillende niveaus.
                             </p>
                             <p>
-                                In de praktijk is dat soms een beetje puzzelen. Niet iedereen kan evenveel tijd vrijmaken,  maar als iedereen een steentje bijdraagt kunnen we zo bouwen aan goeie school. Eentje waar er begrip is voor ieders talenten én mening. Zo maken we echt samen school.
+                                In de praktijk is dat soms een beetje puzzelen. Niet iedereen kan evenveel tijd vrijmaken,  maar als iedereen een steentje bijdraagt kunnen we zo bouwen aan een goede school. Eentje waar er begrip is voor ieders talenten én mening. Zo maken we echt samen school.
                            </p>
                         </div>
                     </div>
@@ -303,7 +303,7 @@ section: home
 Is er wel genoeg structuur? Krijgen ze wel de juiste vakken? Kunnen ze terecht in het secundair onderwijs?
    </p>
                             <p>
-Freinetonderwijs heeft weldegelijk structuur. Er is een dagindeling, afspraken en regels. Deze worden soms geïnstalleerd door de school of leerkracht, maar liefst in samenspraak met ouders en kinderen. Zo worden deze structuren gedragen en dus beter nageleefd.
+Freinetonderwijs heeft wel degelijk structuur. Er is een dagindeling, afspraken en regels. Deze worden soms geïnstalleerd door de school of leerkracht, maar liefst in samenspraak met ouders en kinderen. Zo worden deze structuren gedragen en dus beter nageleefd.
    </p>
 
 
@@ -312,10 +312,10 @@ Freinetonderwijs heeft weldegelijk structuur. Er is een dagindeling, afspraken e
                     <div class="o-grid__item u-1-of-2-bp4">
                         <div class="u-max-width-sm s-content">
                                <p>
-De traditionele kennisvakken als biologie of geschiedenis organiseren we niet. De onderwerpen komen wel aan bod in projecten en werkstukken. We bekijken dit vakoverschrijdend en laten de kinderen vooral zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
+Alle traditionele leergebieden komen aan bod in projecten en werkstukken. We bekijken dit vakoverschrijdend en laten de kinderen zelf onderzoeken hoe het in elkaar zit. Daarbij focussen we vooral op samenwerken, info opzoeken en verwerken en ideeën presenteren. Zaken die erg belangrijk zijn in een verdere schoolcarrière.
    </p>
                             <p>
-Klimop heeft dezelfde eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties klimop alumni zijn daar het bewijs van.
+Klimop heeft dezelfde eindtermen als andere scholen en krijgt zoals iedereen de inspectie over de vloer. Tieners kunnen vanuit een freinetschool gewoon doorstromen naar traditioneel secundair onderwijs, 20 generaties Klimopalumni zijn daar het bewijs van.
                             </p>
                         </div>
                     </div>
