--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ section: home
                     </h1>
                     <p class="u-mb-delta">Op 18 februari kan je al je vragen stellen op de opendeurdag. </p>
                     <p>
-                        <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
+                        <a href="https://www.facebook.com/events/180264842456058/" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
                            Meer over de opendeurdag
                         </a>
                     </p>
@@ -335,7 +335,7 @@ Klimop heeft dezelfde eindtermen als andere scholen en krijgt zoals iedereen de 
                     <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! Kom op 18 februari tussen 10 en 13u naar Klimop.</h1>
                     <p class="u-mb-delta">Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
                     <p>
-                        <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
+                        <a href="https://www.facebook.com/events/180264842456058/" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
                              Ontdek de details via Facebook
                         </a>
                     </p>
