tekstdetail ( en 'het'

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ section: home
                                     (Individuele) Begeleiding bij specifieke problemen
                                 </h2>
                                 <p>
-                                    De opvolging van de kinderen, zowel op cognitief als sociaal-emotioneel vlak, vindt bijna dagelijks plaats. Een toets of examen geeft onvoldoende weer wat iemand geleerd heeft en hoeveel iemand ondertussen gegroeid is. Elk kind heeft zijn eigen traject waarbij het totale kind (het de evolutie van welbevinden en betrokkenheid even belangrijk is als kennis. Een goede klasorganisatie en het toepassen van daaraan aangepaste opvolgingsmethoden maken het mogelijk de kinderen heel nauw te observeren en dit op een vlotte manier te registeren.
+                                    De opvolging van de kinderen, zowel op cognitief als sociaal-emotioneel vlak, vindt bijna dagelijks plaats. Een toets of examen geeft onvoldoende weer wat iemand geleerd heeft en hoeveel iemand ondertussen gegroeid is. Elk kind heeft zijn eigen traject waarbij het totale kind (de evolutie van welbevinden en betrokkenheid) even belangrijk is als kennis. Een goede klasorganisatie en het toepassen van daaraan aangepaste opvolgingsmethoden maken het mogelijk de kinderen heel nauw te observeren en dit op een vlotte manier te registeren.
                                 </p>
                             </div>
                         </div>
