--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@ section: home
             <h1 class="u-ms7-bp3 u-color-delta-base">
                 Lijkt dat iets voor jullie?
             </h1>
-            <p class="u-mb-delta">Op 23 februari kan je al je vragen stellen op de opendeurdag. </p>
+            <p class="u-mb-delta">Op 15 februari kan je al je vragen stellen op de opendeurdag. </p>
             <p>
-                <a href="https://www.facebook.com/events/2209565542693622/" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
+                <a href="https://www.facebook.com/events/2555331157835890/" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
                    Meer over de opendeurdag
                 </a>
             </p>
@@ -337,10 +337,10 @@ section: home
         <div class="o-container">
             <div class="c-row__section">
                 <div class="u-max-width-md u-text-center u-align-horizontal">
-                    <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! Kom op 23 februari tussen 9u30 en 12u naar Klimop.</h1>
+                    <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! Kom op 15 februari tussen 9u30 en 12u30 naar Klimop.</h1>
                     <p class="u-mb-delta">Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
                     <p>
-                        <a href="https://www.facebook.com/events/2209565542693622/" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
+                        <a href="https://www.facebook.com/events/2555331157835890/" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
                              Ontdek de details via Facebook
                         </a>
                     </p>
