--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ section: home
                         </div>
                         <aside class="c-timeline__aside">
                             <p class="c-timeline__info">
-                                De pauze is er om uit te waaien. Het grote, groene domein stimuleert de exploratiedrang bij de kinderen. Na de speeltijd krijgt iedereen zijn gezonde hap en sap en kunnen de kinderen ondertussen genieten van een verhaal of bespreken we een probleem die voorkwam.
+                                De pauze is er om uit te waaien. Het grote, groene domein stimuleert de exploratiedrang bij de kinderen. Na de speeltijd krijgt iedereen zijn gezonde hap en sap en kunnen de kinderen ondertussen genieten van een verhaal of bespreken we een probleem dat voorkwam.
                             </p>
                         </aside>
                     </article>
