added Charlottes sentence

--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@ section: home
             <h1 class="u-ms7-bp3 u-color-delta-base">
                 Lijkt dat iets voor jullie?
             </h1>
-            <p class="u-mb-delta">Welke zin zet ik hier Charlotte?</p>
+            <p class="u-mb-delta">Maak een afspraak voor een persoonlijke rondleiding.</p>
             <p>
                 <a href="mailto:klaas@klimop.info" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                   Mail Klaas
+                   Mail onze coördinator Klaas
                 </a>
             </p>
         </div>
