--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ section: home
         <div class="o-container">
             <div class="c-row__section">
                 <div class="u-max-width-md u-text-center u-align-horizontal">
-                    <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! Contacteer onze coördinator voor een persoonlijke rondleiding.</h1>
+                    <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! <br />Contacteer onze coördinator voor een persoonlijke rondleiding.</h1>
               
                     <p>
                         <a href="mailto:klaas@klimop.info" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
