--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ section: home
                 <h1 class="u-color-beta-base u-ms7-bp3">
                     Elke dag een nieuw verhaal: samen geschreven, vormgegeven en gepubliceerd.
                 </h1>
+                <p><iframe src="https://player.vimeo.com/video/252737931" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></p>
             </div>
         </div>
     </div>
