--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ section: home
                 <h1 class="u-color-beta-base u-ms7-bp3">
                     Elke dag een nieuw verhaal: samen geschreven, vormgegeven en gepubliceerd.
                 </h1>
-                <p><iframe src="https://player.vimeo.com/video/252737931" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></p>
+                <p><iframe width="100%" height="100%" src="https://www.youtube.com/embed/pW-H8x1FOkg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             </div>
         </div>
     </div>
