--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@ section: home
             <h1 class="u-ms7-bp3 u-color-delta-base">
                 Lijkt dat iets voor jullie?
             </h1>
-            <p class="u-mb-delta">Reserveer snel je tijdslot en kom langs op onze opendeurdag!</p>
+            <p class="u-mb-delta">Laat weten dat je langskomt!</p>
             <p>
-                <a href="https://doodle.com/poll/muprsfwxba5w4znz" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                   Reserveer je tijdslot
+                <a href="https://fb.me/e/275m6LASu" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
+                   Via het Facebook 
                 </a>
             </p>
         </div>
