--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ section: home
             <p class="u-mb-delta">Laat weten dat je langskomt!</p>
             <p>
                 <a href="https://fb.me/e/275m6LASu" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                   Via het Facebook 
+                   Via onze Facebook pagina
                 </a>
             </p>
         </div>
