new date and fb page

--- a/index.html
+++ b/index.html
@@ -233,9 +233,9 @@ section: home
             <h1 class="u-ms7-bp3 u-color-delta-base">
                 Lijkt dat iets voor jullie?
             </h1>
-            <p class="u-mb-delta">Laat weten dat je langskomt!</p>
+            <p class="u-mb-delta">Laat weten dat je langskomt op onze opendeurdag op zaterdag 2 maart, tussen 9 en 12!</p>
             <p>
-                <a href="https://fb.me/e/275m6LASu" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
+                <a href="https://www.facebook.com/events/366360666109820" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
                    Via onze Facebook pagina
                 </a>
             </p>
